deploy/k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-notification-worker
  namespace: fase5-video-notification-worker
  labels:
    app: video-notification-worker
    component: worker

spec:
  replicas: 1

  selector:
    matchLabels:
      app: video-notification-worker

  template:
    metadata:
      labels:
        app: video-notification-worker
        component: worker

    spec:
      serviceAccountName: video-notification-worker-sa

      containers:
        - name: video-notification-worker
          image: 814147156565.dkr.ecr.us-east-1.amazonaws.com/fase5-video-notification-worker:latest
          imagePullPolicy: Always

          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
